--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h1 class="titulo2">
                         <div class="parte1">Apoie e faça parte</div> da familia EG
                     </h1>
-                    <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In officia doloribus repudiandae quisquam voluptates!  Magni porro labore velit iusto eligendi voluptatibus,  excepturi accusantium explicabo <br> ipsam magnam qui voluptates adipisci dicta?</p>
+                    <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> In officia doloribus repudiandae quisquam voluptates!  Magni porro labore velit iusto eligendi voluptatibus, <br>  excepturi accusantium explicabo <br> ipsam magnam qui voluptates adipisci dicta?</p>
                     <form action="">
                         <input type="text" name="nome" id="nome" placeholder="Nome">
                         <input type="email" name="email" id="email" placeholder="E-mail">
